# learnandroid

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/indi/qjx/learnandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/indi/qjx/learnandroid/: MainActivity.java  MyApplication.java
app/src/main/res/anim/: animation_test.xml
app/src/main/res/layout/: activity_binder_pool.xml  activity_book_manager.xml  activity_conflict_inside.xml  activity_conflict_outside.xml  activity_flow.xml  activity_ipc.xml  activity_ipcsecond.xml  activity_livedata.xml  activity_main.xml  activity_messenger.xml  activity_provider.xml  activity_sqlite.xml  activity_tcpclient.xml  activity_view.xml  activity_view_anim.xml  activity_view_simple.xml  content_layout2.xml  item_simple_button.xml
app/src/main/res/values/: strings.xml
app/src/test/java/indi/qjx/learnandroid/: ExampleUnitTest.java
docs/: 1-跨进程通信IPC.md  2-自定义view.md  3-jetpack.md  4-database.md  5-协程和flow.md  6-动画.md  7-compose.md
gradle/wrapper/: gradle-wrapper.properties
lib_base/: build.gradle
lib_base/src/androidTest/java/indi/qjx/libtemplate/: ExampleInstrumentedTest.java
lib_base/src/main/: AndroidManifest.xml
lib_base/src/main/java/indi/qjx/libtemplate/: MainActivity.java
lib_compose/: build.gradle
lib_compose/src/androidTest/java/indi/qjx/lib_compose/: ExampleInstrumentedTest.kt
lib_compose/src/main/: AndroidManifest.xml
lib_compose/src/test/java/indi/qjx/lib_compose/: ExampleUnitTest.kt
lib_template/: build.gradle
lib_template/src/main/res/values/: strings.xml
lib_template/src/test/java/indi/qjx/libtemplate/: ExampleUnitTest.java
nativelib/: build.gradle
nativelib/src/androidTest/java/indi/qjx/nativelib/: ExampleInstrumentedTest.java
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: CMakeLists.txt  hello.c  nativelib.cpp
(+76 files in other folders)
